[gd_scene load_steps=12 format=3 uid="uid://cj6gq6ytvciuk"]

[ext_resource type="Script" path="res://Scene/puzzle_shift/puzzle_shift.gd" id="1_kyafp"]
[ext_resource type="Texture2D" uid="uid://b8jik37dylaiv" path="res://Letter_Asset/a.png" id="2_y0u1e"]
[ext_resource type="Texture2D" uid="uid://bnx04qsfppta1" path="res://Letter_Asset/b.png" id="3_4u7ax"]
[ext_resource type="Texture2D" uid="uid://bpok2ufrbr0ba" path="res://Letter_Asset/c.png" id="4_ppqxg"]
[ext_resource type="Texture2D" uid="uid://1sj2fr4chs74" path="res://Letter_Asset/d.png" id="5_xh1g2"]
[ext_resource type="Texture2D" uid="uid://bw2lw0dugsaru" path="res://Letter_Asset/e.png" id="6_dc58s"]
[ext_resource type="Texture2D" uid="uid://llwxte3v2mkr" path="res://Letter_Asset/f.png" id="7_4i4y2"]
[ext_resource type="Texture2D" uid="uid://cwt5pe7dnpux8" path="res://Letter_Asset/g.png" id="8_7mtbg"]
[ext_resource type="Texture2D" uid="uid://c2ku70jpntr2h" path="res://Letter_Asset/h.png" id="9_w7nnp"]
[ext_resource type="Texture2D" uid="uid://cy53s0c3a3cdi" path="res://Letter_Asset/i.png" id="10_fp13h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lhlsq"]
size = Vector2(900, 900)

[node name="PuzzleShift" type="Area2D"]
script = ExtResource("1_kyafp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(453, 447)
shape = SubResource("RectangleShape2D_lhlsq")
one_way_collision_margin = 0.0

[node name="Tile1" type="Sprite2D" parent="."]
position = Vector2(150, 150)
scale = Vector2(3, 3)
texture = ExtResource("2_y0u1e")

[node name="Tile2" type="Sprite2D" parent="."]
position = Vector2(450, 150)
scale = Vector2(3, 3)
texture = ExtResource("3_4u7ax")

[node name="Tile3" type="Sprite2D" parent="."]
position = Vector2(750, 150)
scale = Vector2(3, 3)
texture = ExtResource("4_ppqxg")

[node name="Tile4" type="Sprite2D" parent="."]
position = Vector2(150, 450)
scale = Vector2(3, 3)
texture = ExtResource("5_xh1g2")

[node name="Tile5" type="Sprite2D" parent="."]
position = Vector2(450, 450)
scale = Vector2(3, 3)
texture = ExtResource("6_dc58s")

[node name="Tile6" type="Sprite2D" parent="."]
position = Vector2(750, 450)
scale = Vector2(3, 3)
texture = ExtResource("7_4i4y2")

[node name="Tile7" type="Sprite2D" parent="."]
position = Vector2(150, 750)
scale = Vector2(3, 3)
texture = ExtResource("8_7mtbg")

[node name="Tile8" type="Sprite2D" parent="."]
position = Vector2(450, 750)
scale = Vector2(3, 3)
texture = ExtResource("9_w7nnp")

[node name="Tile9" type="Sprite2D" parent="."]
position = Vector2(750, 750)
scale = Vector2(3, 3)
texture = ExtResource("10_fp13h")
